[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leverage-ai"
version = "2.2.0"
description = "Multi-provider AI orchestrator - intelligently routes requests across 9 LLM providers with fallback chains, semantic caching, and a live-configurable /providers, /models, and /settings panel"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Leverage AI Team"}
]

dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "fastembed>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
leverage-ai = "leverage_ai.__main__:main"

[tool.setuptools]
packages = ["leverage_ai"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.coverage.run]
source = ["leverage_ai"]
